force-app/main/default/objects/Case/fields/Services_to_Family_and_Children__c.field-meta.xml
<CustomField>
    <fullName>Services_to_Family_and_Children__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Services to Family and Children</label>
    <type>Checkbox</type>
</CustomField>