force-app/main/default/objects/Case/fields/Shelter__c.field-meta.xml
<CustomField>
    <fullName>Shelter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shelter</label>
    <type>Checkbox</type>
</CustomField>