force-app/main/default/objects/Case/fields/Single_Parent_Adoption_Check__c.field-meta.xml
<CustomField>
    <fullName>Single_Parent_Adoption_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Single Parent Adoption Check</inlineHelpText>
    <label>Single Parent Adoption Check</label>
    <type>Checkbox</type>
</CustomField>