force-app/main/default/objects/Case/fields/Sub_Types__c.field-meta.xml
<CustomField>
    <fullName>Sub_Types__c</fullName>
    <label>Sub Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>