force-app/main/default/objects/Case/fields/Subsidy_Agreement_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Subsidy_Agreement_Approval_Status__c</fullName>
    <label>Subsidy Agreement Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>