force-app/main/default/objects/Case/fields/Subsidy_Agreement_Comments__c.field-meta.xml
<CustomField>
    <fullName>Subsidy_Agreement_Comments__c</fullName>
    <inlineHelpText>Subsidy Agreement Comments</inlineHelpText>
    <label>Subsidy Agreement Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>