force-app/main/default/objects/Case/fields/Subsidy_Agreement_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Subsidy_Agreement_Start_Date__c</fullName>
    <inlineHelpText>Subsidy Agreement Start Date</inlineHelpText>
    <label>Subsidy Agreement Start Date</label>
    <type>Date</type>
</CustomField>