force-app/main/default/objects/Case/fields/Subsidy_Agreement_Under_Appeal__c.field-meta.xml
<CustomField>
    <fullName>Subsidy_Agreement_Under_Appeal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Subsidy Agreement Under Appeal</inlineHelpText>
    <label>Subsidy Agreement Under Appeal</label>
    <type>Checkbox</type>
</CustomField>