force-app/main/default/objects/Case/fields/Subsidy_Provider_Id__c.field-meta.xml
<CustomField>
    <fullName>Subsidy_Provider_Id__c</fullName>
    <label>Subsidy Provider Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>