force-app/main/default/objects/Case/fields/Substance_Abuse__c.field-meta.xml
<CustomField>
    <fullName>Substance_Abuse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Substance Abuse</label>
    <type>Checkbox</type>
</CustomField>