force-app/main/default/objects/Case/fields/Supervisor_Decisions__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Decisions__c</fullName>
    <label>Supervisor Decisions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Screen In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>