force-app/main/default/objects/Case/fields/Telephone_Number__c.field-meta.xml
<CustomField>
    <fullName>Telephone_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Telephone Number</label>
    <type>Checkbox</type>
</CustomField>