force-app/main/default/objects/Case/fields/To_Be_A_Volunteer__c.field-meta.xml
<CustomField>
    <fullName>To_Be_A_Volunteer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>To Be A Volunteer</label>
    <type>Checkbox</type>
</CustomField>