force-app/main/default/objects/Case/fields/Uncontrollable_Child__c.field-meta.xml
<CustomField>
    <fullName>Uncontrollable_Child__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Uncontrollable Child</label>
    <type>Checkbox</type>
</CustomField>