force-app/main/default/objects/Case/fields/Unknown_Reporter__c.field-meta.xml
<CustomField>
    <fullName>Unknown_Reporter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unknown Reporter</label>
    <type>Checkbox</type>
</CustomField>