force-app/main/default/objects/Case/fields/Voluntary_Placement__c.field-meta.xml
<CustomField>
    <fullName>Voluntary_Placement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Voluntary Placement</label>
    <type>Checkbox</type>
</CustomField>