force-app/main/default/objects/Case/fields/Voluntary_Placement_Type__c.field-meta.xml
<CustomField>
    <fullName>Voluntary_Placement_Type__c</fullName>
    <label>Voluntary Placement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Child with Disabilities</fullName>
            </value>
            <value>
                <fullName>Enhanced Afercare</fullName>
            </value>
            <value>
                <fullName>Time Limited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>