force-app/main/default/objects/Case/fields/Worker_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Worker_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Worker Assigned</label>
    <type>Checkbox</type>
</CustomField>