force-app/main/default/objects/Case/recordTypes/Adoptive_Case.recordType-meta.xml
<RecordType>
    <fullName>Adoptive_Case</fullName>
    <active>true</active>
    <businessProcess>Intake</businessProcess>
    <label>Adoptive Case</label>
</RecordType>