force-app/main/default/objects/Case/recordTypes/Intake.recordType-meta.xml
<RecordType>
    <fullName>Intake</fullName>
    <active>true</active>
    <businessProcess>Intake</businessProcess>
    <label>Intake_</label>
</RecordType>