force-app/main/default/objects/Case/recordTypes/RFS_Intake.recordType-meta.xml
<RecordType>
    <fullName>RFS_Intake</fullName>
    <active>true</active>
    <businessProcess>Intake</businessProcess>
    <label>Intake</label>
</RecordType>