force-app/main/default/objects/Case/validationRules/Received_Date_should_not_be_future_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Received_Date_should_not_be_future_date</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW()  &amp;&amp; Received_Date__c  &gt;   NOW()</errorConditionFormula>
    <errorDisplayField>Received_Date__c</errorDisplayField>
    <errorMessage>Date should not be future.</errorMessage>
</ValidationRule>