force-app/main/default/objects/Case/listViews/Adoption_Intake.listView-meta.xml
<ListView>
    <fullName>Adoption_Intake</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Adoptive_Case</value>
    </filters>
    <label>Adoption Intake</label>
</ListView>