force-app/main/default/objects/Case/listViews/I_R_Intakes.listView-meta.xml
<ListView>
    <fullName>I_R_Intakes</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>contact__c</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>Intake_Approval_Status__c</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.ORIGIN</field>
        <operation>equals</operation>
        <value>Information and Referral</value>
    </filters>
    <label>I&amp;R Intakes</label>
</ListView>