force-app/main/default/objects/Case/listViews/My_Open_Intake.listView-meta.xml
<ListView>
    <fullName>My_Open_Intake</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>contact__c</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>Intake_Approval_Status__c</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Open Intake</label>
</ListView>