force-app/main/default/objects/Case/listViews/RFS_Intake.listView-meta.xml
<ListView>
    <fullName>RFS_Intake</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>contact__c</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>Intake_Approval_Status__c</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.ORIGIN</field>
        <operation>equals</operation>
        <value>Request for services</value>
    </filters>
    <label>RFS Intakes</label>
</ListView>