force-app/main/default/objects/Case/listViews/Today_Intakes.listView-meta.xml
<ListView>
    <fullName>Today_Intakes</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>contact__c</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>Intake_Approval_Status__c</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <label>Today Intakes</label>
</ListView>